@startuml Model

package model {


    class User {
        nom: String 
        solde : int 
        ListActions : HashMap<Action , Integer>

        + ajouterACtion()
        + ajouterArgent() 
        + retireArgent()
        

    }

    class Action {
        nom : String 
        prix : int 
        rentabilite : int 
        risque : int 

        + int getPrix()
        + String getNom()
    }



    ' Integer ici : réprsente le nombre des actions disponibles sur le marché par Action  

    class Marche {
        
        ListAction : HashMap<Action , Integer>

        + simuler()
        + poretfeuilleMin()
        + poretfeuilleTangent()
        + poretfeuilleEff()
        + classer()



    }

}

package controle {
    class Controle {

        + validerAchat(User user , int nb , Action action)
        +

    }
}


package Vue {

    class dashbordUser  {
        private BarMenu Menu  
        private InfoSide info 
        private Table table 

        + updateSolde()

    }


    ' extends JMenuBar implements MouseListener

    class BarMenu  {
        JMenu acheterMenu
        JMenu vendreMenu
        JMenu consulterMenu 
        JMenu simulerMenu 
        JMenu helpMenu
    }


    class Table  {
        
        private Object[][] data 
        private String[] colnames 
        private JTable table 

        public  Object[][] getData() 
        public  String[] getColnames() 

    }


    class InfoSide  {

        JLabel labelName ;
        JLabel labelSolde ; 

    }



    dashbordUser --> JFrame 




    BarMenu --> JMenuBar
    BarMenu --* dashbordUser


    Table --> JPanel 
    Table --* dashbordUser


    InfoSide --> JPanel
    InfoSide --* dashbordUser


}


package util {

    class DataBase {

    }
}



controle -- Vue 

controle -- model 

controle -- util 




User -- dashbordUser

@enduml